# federated-learning

flower/: Client.ipynb  Federated Learning with Flower.ipynb  Server.ipynb  client.py  dataset_without_pytorch.py  ml_workload.py  pyproject.toml  requirements.txt  run.sh  server.py  utils.py
flower/medmnist/: dataset_without_pytorch.py  teste.py
