[build-system]
requires = [
    "poetry==1.1.14",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "advanced_flwr_tensorflow"
version = "0.1.0"
description = "Federated Learning with Flower and Tensorflow"
authors = ["thborba"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
flwr = "^0.19.0"
tensorflow-cpu = "^2.9.1"
medmnist = "^2.1.0"
